# recipier

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
assets/: Info.plist  icon-path.txt  icon.icns  icon.xcf
assets/icons/: floppydisk-path.txt  pen-path.txt  plus-path.txt  recycle-path.txt  right-arrow-path.txt  save-path.txt  search-path.txt  x-path.txt
src/: main.rs  measure.rs  recipe.rs  update.rs  updater.rs
src/gui/: add.rs  handler.rs  impls.rs  mod.rs  state.rs  theme.rs
src/gui/data/: config.rs  edit.rs  home.rs  mod.rs  remove.rs  screen.rs  search.rs  view.rs
src/gui/ui/: edit.rs  home.rs  mod.rs  recipe.rs  remove.rs  search.rs
src/gui/widgets/: icon.rs  maybe.rs  mod.rs  none.rs  separator.rs  svgicon.rs  unit.rs
src/recipes/: db.rs  measure.rs  mod.rs  recipe.rs
src/recipes/db/: mod.rs
src/recipes/measure/: mod.rs
src/update/: mod.rs
