[package]
name = "recipier"
version = "0.1.0"
edition = "2018"

[dependencies]
druid = { version = "0.7", features = ["image"] } # GUI library
generational-arena = { version = "0.2", features = ["serde"] } # Pool of all recipes
semver = "1.0" # Checking versions of github releases
sublime_fuzzy = "0.7" # Fuzzy finding recipes by search key
humantime = "2.1" # Formatting recipe time estimates
serde = { version = "1.0", features = ["derive"] } # Saving all recipes
serde_json = "1.0" # Saving recipes and eventually github API responses
image = "0.23" # For decoding image formats

[target.'cfg(windows)'.build-dependencies]
winres = "0.1" # Adding icon to window build

[profile.release]
codegen-units = 1
lto = true
