[package]
name = "recipier"
version = "0.1.0"
edition = "2018"

[dependencies]
druid = { version = "0.7", features = [
    "image", "svg", "im", "serde",
    "png", "jpeg", "bmp", "ico"
]} # GUI library

hashbrown = { version = "0.11", features = ["serde"] } # Faster hash maps for recipe database
lru = "0.7" # LRU cache of loaded image data for recipes
uuid = { version = "0.8", features = ["serde", "v4"] } # Generating unique identifiers for each recipe
parking_lot = { version = "0.11", features= ["serde"] } # Faster RwLock and Mutex types

semver = "1.0" # Checking versions of github releases when auto updating

sublime_fuzzy = "0.7" # Fuzzy finding recipes by search key
chrono = { version = "0.4", features = ["serde"] } # Datetime handling

serde = { version = "1.0", features = ["derive", "rc"] } # Saving all recipes
serde_json = "1.0" # Saving recipes and eventually github API responses
ureq = { version = "2.3", features = ["json"] } # Small HTTP(S) client for autoupdates
zip = "0.5" # Decompressing update files
tempfile = "3.2" # Temporary files to download updates to

lazy_static = "1.4" # Lazily evaluated statics used for icons and semver

log = { version = "0.4", features = ["release_max_level_warn"] } # Logging facade macros
simplelog = "0.10" # Logging backend

thiserror = "1.0" # Error type creation

[target.'cfg(windows)'.build-dependencies]
winres = "0.1" # Adding icon to window build

[build-dependencies]
rust_info = "0.3" # Get the current target triple and set an environment variable

[profile.release]
codegen-units = 1
lto = true
